# PunkRecords

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.tmp_manual_credentials_cli/: accounts.json
.tmp_manual_credentials_cli_2/: accounts.json
.tmp_manual_routing/: accounts.json  settings.json
.tmp_manual_routing/stats/: proxy-requests.jsonl  proxy-rollups.json
.tmp_manual_runtime/: accounts.json
.tmp_manual_runtime_proxy/: accounts.json
.tmp_manual_runtime_proxy/stats/: proxy-requests.jsonl  proxy-rollups.json
.tmp_manual_transform_check/: accounts.json  settings.json
.tmp_manual_transform_check/stats/: proxy-requests.jsonl  proxy-rollups.json
.tmp_manual_transform_v2_failclosed/: accounts.json
src/hermes_codex_multi_auth/: cli.py  failover.py  hermes_bridge.py  models.py  oauth.py  paths.py  proxy.py  settings_store.py  stats_store.py  store.py  tui.py  usage.py
src/punkrecords/: cli.py  failover.py  models.py  oauth.py  paths.py  proxy.py  routing.py  settings_store.py  stats_store.py  store.py  transforms.py  tui.py  usage.py
src/punkrecords/providers/: __init__.py  contracts.py  openai_codex.py
src/punkrecords/templates/: base.html  dashboard.html
src/punkrecords/templates/partials/: dashboard_accounts.html  dashboard_charts.html  dashboard_overview.html  dashboard_requests.html  dashboard_settings.html  sidebar.html
tests/: mock_oauth_server.py  test_login_flow.py  test_proxy_server.py  test_store_and_cli.py  test_tui.py
