[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "punkrecords"
version = "0.1.0"
description = "PunkRecords plugin-based multi-account OAuth proxy runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.2",
  "uvicorn==0.42.0",
]
authors = [
  { name = "Miko" }
]
keywords = ["proxy", "openai-compatible", "oauth", "providers", "cli"]

[project.scripts]
punkrecords = "punkrecords.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
